--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                           skip-waiting
                           base-uri="bower_components/platinum-sw/bootstrap"
                           on-service-worker-installed="displayInstalledToast">
-      <platinum-sw-cache default-cache-strategy="fastest"
+      <platinum-sw-cache default-cache-strategy="networkFirst"
                          cache-config-file="cache-config.json">
       </platinum-sw-cache>
     </platinum-sw-register>
