fixing tab padding and menu toggle. Adding the transaction list and account lists to the main page

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -30,6 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="tpa-nav-bar/tpa-nav-bar.html">
 <link rel="import" href="tpa-icons/tpa-icons.html">
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
+<link rel="import" href="tpa-transaction-list/tpa-transaction-list.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 
