--- a/app/elements/tpa-top-bar/tpa-top-bar.html
+++ b/app/elements/tpa-top-bar/tpa-top-bar.html
@@ -78,7 +78,10 @@
     </template>
     <script>
         Polymer({
-            is: "tpa-top-bar"
+            is: "tpa-top-bar",
+            menuAction: function(){
+              this.fire("open-menu")
+            }
         });
     </script>
 </dom-module>
