--- a/app/elements/tpa-transaction-list/tpa-transaction-list-i18n.html
+++ b/app/elements/tpa-transaction-list/tpa-transaction-list-i18n.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../ing-i18n/ing-i18n.html">
-<link rel="import" href="../iron-signals/iron-signals.html">
+<link rel="import" href="../ing-i18n/tpa-i18n.html">
+<link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
 <dom-module id="tpa-transaction-list-i18n">
     <template>
         <iron-signals on-iron-signal-i18n="i18nSignal"></iron-signals>
