--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -23,6 +23,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
    for further information on custom CSS properties.
    */
 
+  #mainToolbar {
+    --layout-horizontal:{
+      padding-left:0;
+      padding-right:0;
+    }
+  }
   /* Application theme */
 
   :root {
