--- a/app/elements/tpa-transaction-list/tpa-transaction-list.html
+++ b/app/elements/tpa-transaction-list/tpa-transaction-list.html
@@ -1,7 +1,6 @@
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../iron-icons/iron-icons.html">
-<link rel="import" href="../ing-style/ing-fonts.html" type="css">
-<link rel="import" href="../iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="tpa-transactions-list-styles.html">
 <link rel="import" href="tpa-transaction-list-i18n.html">
 <dom-module name="tpa-transaction-list">
@@ -12,13 +11,13 @@
                 id="i18ncontent"
                 content="{{i18ncontent}}"
                 currency-symbol-code="{{currencySymbolCode}}"></tpa-transaction-list-i18n>
-        <iron-ajax
-                auto
-                id="getTransactions"
-                url="/gettransactions"
-                handle-as="json"
-                on-response="getResponse">
-        </iron-ajax>
+        <!--<iron-ajax-->
+                <!--auto-->
+                <!--id="getTransactions"-->
+                <!--url="/gettransactions"-->
+                <!--handle-as="json"-->
+                <!--on-response="getResponse">-->
+        <!--</iron-ajax>-->
         <h3>{{title}}</h3>
         <div>
             <template as="transactionGroup" is="dom-repeat" items="{{transactions}}">
@@ -71,7 +70,8 @@
                 }
             },
             ready:function(){
-                this.$.getTransactions.generateRequest();
+              this.transactions = getTransactions(this.groupTitleField);
+//                this.$.getTransactions.generateRequest();
             },
             getGroupTitle: function(group){
                 return group[this.groupTitleField];
@@ -92,5 +92,116 @@
                 return String.fromCharCode(currencyCode);
             }
         });
+
+        // temp func to get mock data should be replaced with a blueprint
+        function getTransactions(type){
+          console.log(this.groupTitleField);
+          if(type == "date"){
+            return [
+              {
+                "date": "11 Feb",
+                "accountType": "Saving accounts",
+                "transactions": [
+                  {
+                    "name":"Sporting Equipment",
+                    "amount":"10.00",
+                    "icon":"rowing",
+                    "subText":"NL20 INGDB 000131231"
+                  },
+                  {
+                    "name":"transaciton3",
+                    "amount":"1.56",
+                    "icon":"add-shopping-cart",
+                    "subText":"NL20 INGDB 00388881"
+                  }
+                ]
+              },
+              {
+                "date": "12 Feb",
+                "accountType": "Checking accounts",
+                "transactions": [
+                  {
+                    "name":"transaciton1",
+                    "amount":"29.30",
+                    "icon":"rowing",
+                    "subText":"NL20 INGDB 0007878798"
+                  }
+                ]
+              },
+              {
+                "date": "15 Feb",
+                "accountType": "Savings",
+                "transactions": [
+                  {
+                    "name":"transaciton1",
+                    "amount":"109.06",
+                    "icon":"home",
+                    "subText":"NL20 INGDB 0001123"
+                  },
+                  {
+                    "name":"transaciton2",
+                    "amount":"88.00",
+                    "icon":"card-giftcard",
+                    "subText":"NL20 INGDB 00041244"
+                  },
+                  {
+                    "name":"transaciton3",
+                    "amount":"10.00",
+                    "icon":"perm-phone-msg",
+                    "subText":"NL20 INGDB 0023232231"
+                  }
+                ]
+              }
+            ]}
+          else {
+            return [
+              {
+                "accountType": "Saving accounts",
+                "transactions": [
+                  {
+                    "name":"My Savings account",
+                    "amount":"10.00",
+                    "icon":"rowing",
+                    "subText":"NL20 INGDB 000131231"
+                  },
+                  {
+                    "name":"My other savings account",
+                    "amount":"1.56",
+                    "icon":"add-shopping-cart",
+                    "subText":"NL20 INGDB 00388881"
+                  }
+                ]
+              },
+              {
+                "accountType": "Checking accounts",
+                "transactions": [
+                  {
+                    "name":"Check account",
+                    "amount":"29.30",
+                    "icon":"rowing",
+                    "subText":"NL20 INGDB 0007878798"
+                  }
+                ]
+              },
+              {
+                "accountType": "Credit",
+                "transactions": [
+                  {
+                    "name":"My Wifes Credit card",
+                    "amount":"109.06",
+                    "icon":"home",
+                    "subText":"NL20 INGDB 0001123"
+                  },
+                  {
+                    "name":"My Credit Card",
+                    "amount":"88.00",
+                    "icon":"card-giftcard",
+                    "subText":"NL20 INGDB 00041244"
+                  }
+                ]
+              }
+            ]
+          }
+        }
     </script>
 </dom-module>
