fixing up styles for transaction list

--- a/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
+++ b/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <dom-module id="tpa-transactions-list-styles">
     <template>
         <style>
@@ -7,7 +7,7 @@
             }
 
             h3 {
-                color: orange;
+                color:var(--light-secondary-opacity);
             }
 
             .date-header {
@@ -16,7 +16,7 @@
             }
 
             .sub-text {
-                color: orange;
+                color: var(--primary-color);
             }
 
             .main-text {
