tidying up a few things

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
             <section data-route="home">
               <paper-material elevation="1">
-                <tpa-money-transfer class="focus-target"></tpa-money-transfer>
+                <tpa-money-transfer class="focus-target" account-owner="John Smith" account-number="12359238450" account-balance="5000"></tpa-money-transfer>
               </paper-material>
 
               <paper-material elevation="1">
