--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -57,6 +57,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     /* paper-input */
     --paper-input-container-color:var(--light-primary-color)
+
+    /* Icons */
+    --iron-icon-fill-color:var(--primary-color);
+    --iron-icon-stroke-color:var(--primary-color);
   }
 
   /* General styles */
