--- a/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
+++ b/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
@@ -4,10 +4,11 @@
         <style>
             :host {
                 font-family: ING Me Regular;
+                --iron-icon-fill-color:var(--primary-color);
             }
 
             h3 {
-                color:var(--light-secondary-opacity);
+              color: var(--primary-color);
             }
 
             .date-header {
