added settings section with a region selection option

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -69,6 +69,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       setFocus(app.route);
     });
 
+    page('/settings', function() {
+      app.route = 'settings';
+      setFocus(app.route);
+    });
+
     // 404
     page('*', function() {
       app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
