--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -75,7 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 
   #drawerToolbar {
-    color: var(--secondary-text-color);
+    color: var(--primary-color);
     background-color: var(--drawer-menu-color);
     border-bottom: var(--drawer-toolbar-border-color);
   }
@@ -112,7 +112,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     @apply(--layout-center);
 
     text-decoration: none;
-    color: var(--menu-link-color);
+    color: var(--primary-color);
     font-family: 'INgMe', sans-serif;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
