--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -31,6 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="tpa-icons/tpa-icons.html">
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="tpa-transaction-list/tpa-transaction-list.html">
+<link rel="import" href="tpa-region-selection/tpa-region-selection.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 
