fixing up the colors for money transfer

--- a/app/elements/tpa-money-transfer/tpa-money-transfer.html
+++ b/app/elements/tpa-money-transfer/tpa-money-transfer.html
@@ -34,6 +34,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: var(--primary-color)
     }
 
+    paper-input{
+      color:var(--light-primary-color)
+    }
+
     :host{
       --iron-icon-fill-color:var(--primary-color);
     }
