--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --disabled-text-color: #9b9b9b;
     --divider-color: #dbdbdb;
     --primary-color: #ff6200;
-    --light-primary-color: var(--paper-indigo-100);
+    --light-primary-color: var(--paper-grey-500);
     --dark-primary-color: var(--paper-indigo-700);
     --accent-color: var(--paper-pink-a200);
     --light-accent-color: var(--paper-pink-a100);
