fixing height of the paper tabs

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -28,6 +28,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding-left:0;
       padding-right:0;
     }
+
+    height:55px;
   }
   /* Application theme */
 
