paper-tabs selected tab fixes

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -27,9 +27,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --layout-horizontal:{
       padding-left:0;
       padding-right:0;
+      height:auto;
     }
 
-    height:55px;
+    height:auto;
   }
   /* Application theme */
 
