--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <tpa-transaction-list hide-icon group-title-field="accountType"></tpa-transaction-list>
               </paper-material>
 
+              <paper-material elevation="1">
+                <tpa-mortgage-calculation></tpa-mortgage-calculation>
+              </paper-material>
+
             </section>
 
             <section data-route="users">
