--- a/app/elements/tpa-top-bar/tpa-top-bar.html
+++ b/app/elements/tpa-top-bar/tpa-top-bar.html
@@ -66,7 +66,7 @@
 
             <span class="icon-ing-logo font-size-xh flex-child flex-self-center">
                 <span class="icon icon-ing-logo icon-ing-logo-ing " aria-hidden="true"></span>
-                <iron-icon class="lion-icon" icon="tpa:lion"></iron-icon>
+                <iron-icon class="lion-icon" icon="tpa:ing-logo-lion"></iron-icon>
             </span>
                 <div class="flex-self-center actions">
                     <paper-icon-button icon="search"></paper-icon-button>
