--- a/app/elements/tpa-mortgage-calculation/tpa-mortage-calculation.html
+++ b/app/elements/tpa-mortgage-calculation/tpa-mortage-calculation.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <link rel="import" href="tpa-mortgage-calculation-line.html">
+<link rel="import" href="tpa-mortgage-calculation-i18n.html">
 
 <dom-module name="tpa-mortgage-calculation">
   <template>
@@ -30,19 +31,29 @@
       }
     </style>
 
-    <h3>Your mortgage calculation</h3>
+    <tpa-mortgage-calculation-i18n
+      id="i18ncontent"
+      content="{{i18ncontent}}"></tpa-mortgage-calculation-i18n>
+
+    <h3>{{i18ncontent.YourMortgageCalculation}}</h3>
     <section class="main-text">
       <tpa-mortgage-calculation-line text="Maximum loan" amount="€ 253.450"></tpa-mortgage-calculation-line>
       <tpa-mortgage-calculation-line text="Koopsom van de woning" amount="€ 230.200"></tpa-mortgage-calculation-line>
     </section>
     <section>
-      <paper-button class="primary" raised>Make appointment</paper-button>
-      <paper-button class="secondary" raised>Edit calculation</paper-button>
+      <paper-button class="primary" raised>{{i18ncontent.makeAnAppointment}}</paper-button>
+      <paper-button class="secondary" raised>{{i18ncontent.editCalculation}}</paper-button>
     </section>
   </template>
   <script>
     Polymer({
-      is: "tpa-mortgage-calculation"
+      is: "tpa-mortgage-calculation",
+      properties: {
+        i18ncontent:{
+          type:Object,
+          notify:true
+        }
+      }
     });
   </script>
 </dom-module>
