Add the mortgage calculation

--- a/app/elements/tpa-app-layout/tpa-app-layout.html
+++ b/app/elements/tpa-app-layout/tpa-app-layout.html
@@ -34,6 +34,14 @@
                 </paper-card>
             </paper-material>
 
+            <paper-material elevation="3">
+                <div class="card-content">
+                    <paper-card>
+                        <tpa-mortgage-calculation></tpa-mortgage-calculation>
+                    </paper-card>
+                </div>
+            </paper-material>
+
             <!--<paper-material elevation="3">
                 <paper-card>
                     <div class="card-content">
