First start in creating theme. removing css from elements

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -25,10 +25,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
+<!-- TPA the guide -->
+<link rel="import" href="../elements/tpa-icons/tpa-icons.html">
+<link rel="import" href="../styles/fonts.html">
+<link rel="import" href="../styles/typography.html">
+<link rel="import" href="../styles/color.html">
+<link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/shared-styles.html">
+
+
 <!-- TPA elements -->
 <link rel="import" href="tpa-top-bar/tpa-top-bar.html">
 <link rel="import" href="tpa-nav-bar/tpa-nav-bar.html">
-<link rel="import" href="tpa-icons/tpa-icons.html">
+
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="tpa-transaction-list/tpa-transaction-list.html">
 <link rel="import" href="tpa-region-selection/tpa-region-selection.html">
@@ -44,7 +53,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="routing.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
