--- a/app/elements/tpa-app-layout/tpa-app-layout.html
+++ b/app/elements/tpa-app-layout/tpa-app-layout.html
@@ -1,19 +1,6 @@
 <dom-module id="tpa-app-layout">
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment">
-
-            paper-material {
-                border: 2px solid grey;
-                margin-top: 10px;
-                width: 600px;
-                margin-bottom:20px;
-                background-color: white;
-            }
-
-            .layout {
-                margin-bottom: 20px;
-            }
-
+        <style include="shared-styles iron-flex iron-flex-alignment">
         </style>
         <div class="horizontal around-justified layout wrap">
             <paper-material elevation="3">
