--- a/app/elements/tpa-nav-bar/tpa-nav-bar.html
+++ b/app/elements/tpa-nav-bar/tpa-nav-bar.html
@@ -11,20 +11,36 @@
             :host{
               width:100%
             }
-
-            paper-tab {
-              font-family: INGMe, "Arial", sans-serif;
+            a.link {
+                text-align: center;
+                vertical-align: baseline;
+                text-decoration: none;
+                color:#ffffff;
+                line-height:3.5em;
             }
 
         </style>
 
         <paper-tabs selected="0">
-            <paper-tab>Daily Banking</paper-tab>
-            <paper-tab>Saving goals</paper-tab>
-            <paper-tab>Trading</paper-tab>
-            <paper-tab>Mortgage</paper-tab>
-            <paper-tab>Loans</paper-tab>
-            <paper-tab>Insurance</paper-tab>
+            <paper-tab link>
+                <a href="/" class="link" tabindex="-1">Daily Banking</a>
+            </paper-tab>
+            <paper-tab link>
+                <a href="/page-2" class="link" tabindex="-1">Saving goals</a>
+            </paper-tab>
+            <paper-tab link>
+                <a href="/page-3" class="link" tabindex="-1">Trading</a>
+            </paper-tab>
+
+            <paper-tab link>
+                <a href="/page-4" class="link" tabindex="-1">Mortgage</a>
+            </paper-tab>
+            <paper-tab link>
+                <a href="/page-5" class="link" tabindex="-1">Loans</a>
+            </paper-tab>
+            <paper-tab link>
+                <a href="/page-5" class="link" tabindex="-1">Insurance</a>
+            </paper-tab>
         </paper-tabs>
 
     </template>
