--- a/app/elements/tpa-top-bar/tpa-top-bar.html
+++ b/app/elements/tpa-top-bar/tpa-top-bar.html
@@ -7,7 +7,8 @@
 <dom-module name="tpa-top-bar">
     <template>
 
-        <style include="tpa-styles">
+        <style include="shared-styles">
+
             .flex-equal-justified {
               justify-content:space-around;
               display:flex;
@@ -28,32 +29,15 @@
             .flex-equal-justified > span{
               width:33%;
             }
-
-            .icon-ing-logo.font-size-xh{
-              font-size: 2.25rem;
-              font-family:"ing-icons";
-              max-width:160px
-            }
-
-            .icon-ing-logo .icon-ing-logo-ing.icon-ing-logo-ing:before {
-              content: "\e6b9" !important;
-              color: var(--secondary-text-color);
-              font-size: .787em;
-            }
-
-            paper-button.logout {
-              height: 40px;
-            }
-
-            iron-icon.lion-icon {
-              --iron-icon-height: 40PX;
-              --iron-icon-width: 90PX;
-              margin-left:-15px;
+            .icon-ing-logo {
+                display: block;
+                text-align:center;
             }
 
             paper-toolbar {
                 --paper-toolbar-background: var(--primary-background-color);
                 --paper-toolbar-color: var(--primary-color);
+                --paper-toolbar-height:64px;
             }
         </style>
 
@@ -65,13 +49,13 @@
                 </div>
 
             <span class="icon-ing-logo font-size-xh flex-child flex-self-center">
-                <span class="icon icon-ing-logo icon-ing-logo-ing " aria-hidden="true"></span>
+                <iron-icon class="ing-icon" icon="tpa:ing-logo-ing"></iron-icon>
                 <iron-icon class="lion-icon" icon="tpa:ing-logo-lion"></iron-icon>
             </span>
                 <div class="flex-self-center actions">
                     <paper-icon-button icon="search"></paper-icon-button>
                     <paper-icon-button icon="perm-identity"></paper-icon-button>
-                    <paper-button class="logout" raised>Log out</paper-button>
+                    <paper-button class="primary" raised>Log out</paper-button>
                 </div>
             </div>
         </paper-toolbar>
