--- a/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
+++ b/app/elements/tpa-transaction-list/tpa-transactions-list-styles.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <dom-module id="tpa-transactions-list-styles">
     <template>
-        <style>
+        <style include="shared-styles">
             :host {
                 --iron-icon-fill-color:var(--primary-color);
             }
