--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -1,23 +1,11 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-styles/typography.html">
+<link rel="import" href="typography.html">
+<link rel="import" href="fonts.html">
 
 <!-- shared styles for all elements and index.html -->
 <dom-module id="shared-styles">
   <template>
     <style>
-      .page-title {
-        @apply(--paper-font-display2);
-      }
-
       .app-menu {
         --paper-menu-selected-item: {
           color: #fff;
@@ -25,15 +13,62 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
 
-      paper-menu a > *, paper-menu paper-item > *, paper-menu paper-icon-item > * {
-        pointer-events: none;
+      .layout {
+        margin-bottom: 20px;
       }
 
-      @media (max-width: 600px) {
-        .page-title {
-          font-size: 24px!important;
-        }
+      paper-material {
+        border-radius: 2px;
+        height: 100%;
+        padding: 10px;
+        width: calc(30% - 10px);
+        margin: 16px auto;
+        background: white;
       }
+
+      paper-button.primary {
+        background-color: var(--paper-orange-100);
+        color: #ffffff;
+        height:35px;
+      }
+
+      paper-tab {
+        padding: 0 5%;
+      }
+      paper-button.primary:hover {
+        background-color: #ffffff;
+        color:var(--paper-orange-100);
+      }
+
+      iron-icon.ing-icon {
+        --iron-icon-height: 28px;
+        --iron-icon-width: 135px;
+        color: #000066;
+        margin-left:-15px;
+        vertical-align: bottom;
+      }
+      iron-icon.lion-icon {
+        --iron-icon-height: 40px;
+        --iron-icon-width: 82px;
+        margin-left:-15px;
+      }
+      @media (max-width: 1200px) {
+
+        paper-material {
+          width: calc(48.33% - 32px);
+        }
+
+      }
+
+      @media (max-width: 800px) {
+
+        paper-material {
+          --menu-container-display: none;
+          width: calc(97.33% - 32px);
+        }
+
+      }
+
     </style>
   </template>
 </dom-module>
