--- a/app/elements/tpa-money-transfer/en-au/tpa-money-transfer.html
+++ b/app/elements/tpa-money-transfer/en-au/tpa-money-transfer.html
@@ -8,31 +8,28 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../../bower_components/polymer/polymer.html">
 
-<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
-<link rel="import" href="../../bower_components/iron-list/iron-list.html">
-<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../../bower_components/iron-list/iron-list.html">
+<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html">
 
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-<link rel="import" href="../../bower_components/paper-styles/paper-styles.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../../bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
 
-<link rel="import" href="../../bower_components/paper-dialog-behavior/paper-dialog-behavior.html">
-<link rel="import" href="../../bower_components/paper-dialog-behavior/paper-dialog-shared-styles.html">
+<link rel="import" href="../../../bower_components/paper-dialog-behavior/paper-dialog-behavior.html">
+<link rel="import" href="../../../bower_components/paper-dialog-behavior/paper-dialog-shared-styles.html">
 
-<link rel="import" href="../../elements/ing-i18n/tpa-i18n.html">
-<link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
 
 <dom-module id="tpa-money-transfer">
-  <link rel="import" type="css" href="component.css">
+  <link rel="import" type="css" href="../component.css">
   <template>
 
-<iron-signals on-iron-signal-i18n="i18nSignal"></iron-signals>
 
     <section class="my-card balance">
       <div>
@@ -45,35 +42,35 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.amount}}" type="number">
+      <paper-input label="Amount" type="number">
         <div prefix>€</div>
       </paper-input>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.recipient}}"></paper-input>
+      <paper-input label="Recipient"></paper-input>
       <div class="center">
         <paper-icon-button icon="book" class="color--brand-light" onclick="dialog.toggle()"></paper-icon-button>
       </div>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.accountNumber}}"></paper-input>
+      <paper-input label="Account number"></paper-input>
       <div class="center">
         <paper-icon-button icon="add" class="color--brand-primary"></paper-icon-button>
       </div>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.usage}}"></paper-input>
+      <paper-input label="Usage"></paper-input>
     </section>
 
     <section class="my-card">
-      <div><paper-input label="{{content.executionDate}}"></paper-input></div>
+      <div><paper-input label="Execution date"></paper-input></div>
     </section>
 
     <section>
-      <paper-button raised primary>{{content.submit}}</paper-button>
+      <paper-button raised primary>Submit</paper-button>
     </section>
 
     <simple-dialog id="dialog" title="Adress Book">
@@ -114,7 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     Polymer({
       is: 'tpa-money-transfer',
 
-      behaviors: [I18nBehavior],
+      behaviors: [/*@i18n-behavior*/],
 
       properties: {
         accountOwner: {
@@ -142,8 +139,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         loadingAddresses: Boolean,
         addresses: Array,
-        i18n: { type: Object, value: function() { return { "de-de":{"recipient":"Empfänger","accountNumber":"Kontonummer","usage":"Verwendungszweck","executionDate":"Ausführungsdatum","submit":"Ausführen","amount":"Betrag"},
-"en-au":{"recipient":"Recipient","accountNumber":"Account number","usage":"Usage","executionDate":"Execution date","submit":"Submit","amount":"Amount"}};}, notify: true },
+        /*@i18n-json*/
       },
 
       _accountBalanceChange: function(n) {
