--- a/app/elements/tpa-money-transfer/src/component.html
+++ b/app/elements/tpa-money-transfer/src/component.html
@@ -1,4 +1,3 @@
-<!-- AUTO GENERATED -->
 <!--
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -8,31 +7,33 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="%PATH%polymer/polymer.html">
 
-<link rel="import" href="../../bower_components/iron-list/iron-list.html">
-<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<!-- iron -->
+<link rel="import" href="%PATH%iron-icons/iron-icons.html">
 
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="%PATH%iron-list/iron-list.html">
+<link rel="import" href="%PATH%iron-ajax/iron-ajax.html">
 
-<link rel="import" href="../../bower_components/paper-styles/paper-styles.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="%PATH%iron-flex-layout/iron-flex-layout-classes.html">
 
-<link rel="import" href="../../bower_components/paper-dialog-behavior/paper-dialog-behavior.html">
-<link rel="import" href="../../bower_components/paper-dialog-behavior/paper-dialog-shared-styles.html">
+<!-- paper -->
+<link rel="import" href="%PATH%paper-styles/paper-styles.html">
+<link rel="import" href="%PATH%paper-button/paper-button.html">
+<link rel="import" href="%PATH%paper-icon-button/paper-icon-button.html">
+<link rel="import" href="%PATH%paper-input/paper-input.html">
 
-<link rel="import" href="../../elements/ing-i18n/tpa-i18n.html">
-<link rel="import" href="../../bower_components/iron-signals/iron-signals.html">
+<link rel="import" href="%PATH%paper-dialog-behavior/paper-dialog-behavior.html">
+<link rel="import" href="%PATH%paper-dialog-behavior/paper-dialog-shared-styles.html">
 
-<dom-module id="tpa-money-transfer">
-  <link rel="import" type="css" href="component.css">
+<!-- @i18n-link -->
+
+<dom-module id="%COMPONENT_NAME%">
+  <link rel="import" type="css" href="%CSSPATH%component.css">
   <template>
 
-<iron-signals on-iron-signal-i18n="i18nSignal"></iron-signals>
+    <!-- @i18n-signal -->
 
     <section class="my-card balance">
       <div>
@@ -45,35 +46,35 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.amount}}" type="number">
+      <paper-input label="${{amount}}$" type="number">
         <div prefix>€</div>
       </paper-input>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.recipient}}"></paper-input>
+      <paper-input label="${{recipient}}$"></paper-input>
       <div class="center">
         <paper-icon-button icon="book" class="color--brand-light" onclick="dialog.toggle()"></paper-icon-button>
       </div>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.accountNumber}}"></paper-input>
+      <paper-input label="${{accountNumber}}$"></paper-input>
       <div class="center">
         <paper-icon-button icon="add" class="color--brand-primary"></paper-icon-button>
       </div>
     </section>
 
     <section class="my-card">
-      <paper-input label="{{content.usage}}"></paper-input>
+      <paper-input label="${{usage}}$"></paper-input>
     </section>
 
     <section class="my-card">
-      <div><paper-input label="{{content.executionDate}}"></paper-input></div>
+      <div><paper-input label="${{executionDate}}$"></paper-input></div>
     </section>
 
     <section>
-      <paper-button raised primary>{{content.submit}}</paper-button>
+      <paper-button raised primary>${{submit}}$</paper-button>
     </section>
 
     <simple-dialog id="dialog" title="Adress Book">
@@ -112,9 +113,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     };
 
     Polymer({
-      is: 'tpa-money-transfer',
+      is: '%COMPONENT_NAME%',
 
-      behaviors: [I18nBehavior],
+      behaviors: [/*@i18n-behavior*/],
 
       properties: {
         accountOwner: {
@@ -142,8 +143,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         loadingAddresses: Boolean,
         addresses: Array,
-        i18n: { type: Object, value: function() { return { "de-de":{"recipient":"Empfänger","accountNumber":"Kontonummer","usage":"Verwendungszweck","executionDate":"Ausführungsdatum","submit":"Ausführen","amount":"Betrag"},
-"en-au":{"recipient":"Recipient","accountNumber":"Account number","usage":"Usage","executionDate":"Execution date","submit":"Submit","amount":"Amount"}};}, notify: true },
+        /*@i18n-json*/
       },
 
       _accountBalanceChange: function(n) {
@@ -171,6 +171,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </script>
 
 
+<!-- adress book -->
   <dom-module id="simple-dialog">
     <template>
       <style include="paper-dialog-shared-styles"></style>
@@ -180,6 +181,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </dom-module>
 
 
+<!-- <paper-button raised onclick="modalAlert.toggle()">modal alert</paper-button>
+<simple-dialog id="modalAlert" modal role="alertdialog">
+  <h2>Alert</h2>
+  <paper-dropdown-menu label="Draft to discard">
+    <paper-listbox class="dropdown-content">
+      <paper-item>Draft 1</paper-item>
+      <paper-item>Draft 2</paper-item>
+      <paper-item>Draft 3</paper-item>
+      <paper-item>Draft 4</paper-item>
+    </paper-listbox>
+  </paper-dropdown-menu>
+  <div class="buttons">
+    <paper-button onclick="modalDetails.toggle()">More details</paper-button>
+    <paper-button dialog-dismiss>Cancel</paper-button>
+    <paper-button dialog-confirm autofocus>Discard</paper-button>
+  </div>
+</simple-dialog>
+<simple-dialog id="modalDetails" modal>
+  <h2>Details</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="buttons">
+    <paper-button dialog-confirm autofocus>OK</paper-button>
+  </div>
+</simple-dialog> -->
 
   <script>
     (function() {
