--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-toolbar id="mainToolbar" class="main-toolbar" justify="center">
           <!-- Application sub title -->
 
-          <tpa-nav-bar></tpa-nav-bar>
+          <tpa-nav-bar base-url="{{baseUrl}}"></tpa-nav-bar>
 
         </paper-toolbar>
 
