changing references to external repos

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -35,8 +35,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
 <!-- TPA elements -->
-<link rel="import" href="tpa-top-bar/tpa-top-bar.html">
-<link rel="import" href="tpa-nav-bar/tpa-nav-bar.html">
+<link rel="import" href="../bower_components/tpa-top-bar/tpa-top-bar.html">
+<link rel="import" href="../bower_components/tpa-nav-bar/tpa-nav-bar.html">
 
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="tpa-transaction-list/tpa-transaction-list.html">
