Moved fonts to elements directory, finalized first version of tpa-styles. Need to go into own repo

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
@@ -27,12 +28,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- TPA the guide -->
 <link rel="import" href="../elements/tpa-icons/tpa-icons.html">
-<link rel="import" href="../styles/fonts.html">
+<link rel="import" href="../elements/tpa-fonts/fonts.html">
 <link rel="import" href="../styles/typography.html">
-<link rel="import" href="../styles/color.html">
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-
 
 <!-- TPA elements -->
 <link rel="import" href="tpa-top-bar/tpa-top-bar.html">
