--- a/app/elements/tpa-top-bar/tpa-top-bar.html
+++ b/app/elements/tpa-top-bar/tpa-top-bar.html
@@ -34,6 +34,20 @@
                 text-align:center;
             }
 
+            iron-icon.ing-icon {
+                --iron-icon-height: 28px;
+                --iron-icon-width: 135px;
+                color: #000066;
+                margin-left:-15px;
+                vertical-align: bottom;
+            }
+
+            iron-icon.lion-icon {
+                --iron-icon-height: 40px;
+                --iron-icon-width: 82px;
+                margin-left:-15px;
+            }
+
             paper-toolbar {
                 --paper-toolbar-background: var(--primary-background-color);
                 --paper-toolbar-color: var(--primary-color);
