--- a/app/styles/typography.html
+++ b/app/styles/typography.html
@@ -9,12 +9,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="fonts.html">
+<link rel="import" href="../elements/tpa-fonts/tpa-fonts.html">
 
 <style is="custom-style">
 
     :root {
-
         /* Shared Styles */
         --paper-font-common-base: {
             font-family: 'INGMe', sans-serif;
