Have nav bar loading tabs dynamically & added tests to the component

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,7 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- TPA elements -->
 <link rel="import" href="../bower_components/tpa-top-bar/tpa-top-bar.html">
-<link rel="import" href="../bower_components/tpa-nav-bar/tpa-nav-bar.html">
+<link rel="import" href="tpa-nav-bar/tpa-nav-bar.html">
 
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="../bower_components/tpa-transaction-list/tpa-transaction-list.html">
@@ -53,7 +53,3 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
-
-<!-- Add your elements here -->
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
