--- a/app/test/index.html
+++ b/app/test/index.html
@@ -18,16 +18,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="../bower_components/web-component-tester/browser.js"></script>
+
   </head>
 
   <body>
 
     <script>
       WCT.loadSuites([
-        'my-greeting-basic.html',
-        'my-greeting-basic.html?dom=shadow',
-        'my-list-basic.html',
-        'my-list-basic.html?dom=shadow'
+        'tpa-nav-bar.html',
+        'tpa-nav-bar.html?dom=shadow'
       ]);
     </script>
 
