adding the dashboard to bootstrap #34

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -43,6 +43,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-region-selection/tpa-region-selection.html">
 <link rel="import" href="../bower_components/tpa-i18n/tpa-i18n.html">
 <link rel="import" href="tpa-app-layout/tpa-app-layout.html">
+<link rel="import" href="../bower_components/tpa-dashboard/tpa-dashboard-data.html">
+<link rel="import" href="../bower_components/tpa-globals/tpa-globals.html">
 <link rel="import" href="tpa-mortgage-calculation/tpa-mortage-calculation.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
