Replacing the default PSK routing with the new app-route component, also added a apiBaseUrl for replacement at build time

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,9 +52,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
 
+<link rel="import" href="../bower_components/app-route/app-location.html">
+<link rel="import" href="../bower_components/app-route/app-route.html">
 
-<!-- Configure your routes here -->
-<link rel="import" href="routing.html">
 
 <!-- Add your elements here -->
 <link rel="import" href="my-greeting/my-greeting.html">
