--- a/app/index.html
+++ b/app/index.html
@@ -92,21 +92,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div main>
         <tpa-dashboard-data></tpa-dashboard-data>
-        <tpa-top-bar class="paper-header"></tpa-top-bar>
-
-        <!-- Main Area -->
-        <paper-scroll-header-panel fixed main id="headerPanelMain">
-        <!-- Main Toolbar -->
-
-        <paper-toolbar id="mainToolbar" class="main-toolbar" justify="center">
-          <!-- Application sub title -->
-
-          <tpa-nav-bar base-url="{{baseUrl}}#/"></tpa-nav-bar>
-
-        </paper-toolbar>
-
-        <!-- Main Content -->
-        <div class="content">
+        <app-header-layout has-scrolling-region>
+          <app-header reveals>
+            <tpa-top-bar class="paper-header"></tpa-top-bar>
+            <paper-toolbar id="mainToolbar" class="main-toolbar" justify="center">
+              <!-- Application sub title -->
+              <tpa-nav-bar base-url="{{baseUrl}}#/"></tpa-nav-bar>
+            </paper-toolbar>
+          </app-header>
+          <!-- Main Content -->
+          <div class="content">
           <iron-pages id="mainPages" attr-for-selected="data-route" selected="{{data.pageName}}" fallback-selection="home">
             <section data-route="home">
               <tpa-app-layout></tpa-app-layout>
@@ -169,7 +164,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
           </iron-pages>
         </div>
-      </paper-scroll-header-panel>
+        </app-header-layout>
       </div>
     </paper-drawer-panel>
 
