--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -17,30 +17,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
-<!-- TPA the guide -->
-<link rel="import" href="../elements/tpa-icons/tpa-icons.html">
-<link rel="import" href="../elements/tpa-fonts/fonts.html">
-<link rel="import" href="../styles/typography.html">
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../styles/shared-styles.html">
-
 <!-- TPA elements -->
 <link rel="import" href="tpa-top-bar/tpa-top-bar.html">
-<link rel="import" href="tpa-nav-bar/tpa-nav-bar.html">
-
+<link rel="import" href="../bower_components/tpa-nav-bar/tpa-nav-bar.html">
 <link rel="import" href="tpa-money-transfer/tpa-money-transfer.html">
 <link rel="import" href="tpa-transaction-list/tpa-transaction-list.html">
 <link rel="import" href="tpa-region-selection/tpa-region-selection.html">
 <link rel="import" href="tpa-app-layout/tpa-app-layout.html">
+<link rel="import" href="tpa-mortgage-calculation/tpa-mortage-calculation.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 
@@ -52,5 +44,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="routing.html">
 
 <!-- Add your elements here -->
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
+<link rel="import" href="../bower_components/tpa-styles/app-theme.html">
+<link rel="import" href="../bower_components/tpa-styles/typography.html">
+<link rel="import" href="../bower_components/tpa-styles/shared-styles.html">
+<link rel="import" href="../bower_components/tpa-font/tpa-font.html">
+<link rel="import" href="../bower_components/tpa-icons/tpa-icons.html">
