adding lang setting global

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <tpa-globals>
       <iron-meta key="services" value="{{services}}"></iron-meta>
+      <iron-meta key="language" value="en"></iron-meta>
     </tpa-globals>
 
 
